# ast-codebase-shaker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sample_order_system.py
.github/workflows/: ci.yml
projmemprog/: ast-codebase-shaker-blueprint.md  cbs-build-progress.md  cbs-test-progress.md
projmemprog/v0.0/: IMPLEMENTATION_FRAMEWORK.md
projmemprog/v1.0/: V1_ROADMAP.md  cbs-blueprint-1.0.md  implementation-framework-1.0.md  v1.0-build-progress.md  v1.0-testing-progress.md
src/shaker/: __init__.py  __main__.py  cli.py  constants.py  models.py
src/shaker/engine/: __init__.py  discovery.py  graph.py  parser.py  pruner.py  remote.py  resolver.py  scoring.py  security.py
src/shaker/infra/: __init__.py  config.py  tokens.py
src/shaker/mcp/: server.py
src/shaker/output/: __init__.py  clipboard.py  json_serializer.py  plain_serializer.py  serializer.py  xml_serializer.py
testing/: README.md  conftest.py
testing/fixtures/circular_imports/: __init__.py  a.py  b.py
testing/fixtures/simple_app/: __init__.py  auth.py  db.py  (+2 more)
testing/integration/: test_cli.py  test_pipeline.py  test_real_projects.py  test_regression.py
testing/unit/: test_clipboard.py  test_config.py  test_config_v1.py  test_constants.py  test_discovery.py  test_graph.py  test_json_serializer.py  test_models.py  test_models_v1.py  test_parser.py  test_performance.py  test_plain_serializer.py  test_pruner.py  test_pruner_budget.py  test_remote.py  test_resolver.py  test_scoring.py  test_security.py  test_serializer.py  test_tokens.py  test_xml_serializer.py
